# picow

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.zed/: settings.json
src/: adc.rs  bluetooth.rs  emg.rs  main.rs  pwm.rs  resources.rs  serial.rs  wifi.rs
src/commands/: command_dispatcher.rs  define_command.rs  mod.rs
src/filters/: EMG.rs  mean.rs  mod.rs
src/state/: calibration.rs  command_handler.rs  events.rs  mod.rs  operation.rs  state_sender.rs
