[package]
name = "picow"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }

embassy-executor = { version = "0.6.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
    "task-arena-size-98304",
] }

embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }

embassy-rp = { version = "0.2.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }

pio-proc = "0.2.2"
pio = "0.2.1"
embassy-usb = { version = "0.3.0", features = ["defmt"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"

embassy-net = { version = "0.4.0", features = [
    "defmt",
    "tcp",
    "udp",
    "dns",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-net-wiznet = { version = "0.1.0", features = ["defmt"] }


cyw43 = { version = "0.2.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.2.0", features = ["defmt", "overclock"] }
static_cell = { version = "2" }
heapless = "0.8.0"
assign-resources = "0.4.1"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 1
overflow-checks = true
lto = "off"

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
