[package]
name = "picow"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }

embassy-executor = { version = "0.6", default-features = false, features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
    "executor-interrupt",
] }

embassy-futures = "0.1.1"
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-time = { version = "0.3.0", default-features = false, features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.2.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

pio-proc = "0.2.2"
pio = "0.2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"

cyw43 = { version = "0.2.0", features = [
    "defmt",
    "firmware-logs",
    "bluetooth",
] }
cyw43-pio = { version = "0.2.0", features = ["defmt"] }

static_cell = { version = "2" }
heapless = "0.8.0"
# assign-resources = "0.4.1"
assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "94ad10e2729afdf0fd5a77cd12e68409a982f58a" }
bt-hci = { version = "0.1.2", default-features = false, features = ["defmt"] }
trouble-host = { version = "0.1.0", features = ["defmt", "gatt"] }
crc16 = "0.4.0"

[patch.crates-io]
trouble-host = { git = "https://github.com/embassy-rs/trouble.git" }
# trouble-host = { git = "https://github.com/embassy-rs/trouble.git", rev = "31765f6bf34e79d8178ae1698da6b09c6e677b70" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "d6a8dce6eef22564160bf25b20528b8b78ec63b8" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", rev = "d6a8dce6eef22564160bf25b20528b8b78ec63b8" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "d6a8dce6eef22564160bf25b20528b8b78ec63b8" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "d6a8dce6eef22564160bf25b20528b8b78ec63b8" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "d6a8dce6eef22564160bf25b20528b8b78ec63b8" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "d6a8dce6eef22564160bf25b20528b8b78ec63b8" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "d6a8dce6eef22564160bf25b20528b8b78ec63b8" }
cyw43 = { git = "https://github.com/embassy-rs/embassy.git", rev = "d6a8dce6eef22564160bf25b20528b8b78ec63b8" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git", rev = "d6a8dce6eef22564160bf25b20528b8b78ec63b8" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 1
overflow-checks = true
lto = "off"

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
